# pynxtools-xps

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  MANIFEST.in  README.md  contact.html  cspell.json  dev-requirements.txt  index.html  javascript.js  mkdocs.yaml  pyproject.toml
.cspell/: custom-dictionary.txt
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: build_docs.yml  cff_validation.yml  check_citation.yaml  compatibility_with_pynxtools_release.yaml  compatibility_with_pynxtools_release.yml  cruft-update.yml  cruft_update.yml  cruft_update.yml.rej  manual_release.yaml  mkdocs-deploy.yml  nomad-requirements.yaml  nomad-requirements.yml  publish.yml  pylint.yml  pynxtools_compatibility.yaml  pynxtools_main_compatibility.yaml  pytest.yml  release-on-citation-update.yaml  spellcheck.yaml  spellcheck.yml  update_citation.yaml
docs/: contact.md  index.md
docs/explanation/: appdefs.md  contextualization.md  coordinate_system.md  data_processing.md  implementation.md  motivation.md  nomad_integration.md  parser_architecture.md  versioning.md
docs/how-tos/: build_a_parser.md  build_a_reader.md
docs/reference/: code_guidelines.md  kratos.md  phi.md  scienta.md  specs.md  vms.md
docs/tutorial/: contributing.md  installation.md  nexusio.md  nomad.md  nomad_usage.md  standalone.md
examples/: README.md  regenerate_examples.sh  regenerate_examples_undocumented.sh
examples/coordinate_system/: README.md  config-stl.json  config_vms_cs_fixed.json  config_vms_transformations_fixed.json  vms-cs-fixed.nxs  vms-cs.glb  vms-transformations-fixed.nxs
examples/coordinate_system/shapes/: analyser.stl  beam.stl  sample.stl  shapes.py
examples/phi/: README.md  SnO2_10nm.pro.nxs  SnO2_10nm.spe.nxs  SnO2_10nm_1.pro.nxs  eln_data_phi.yaml  output.nxs
examples/scienta/: Cu-HHTP.nxs  Cu-HHTP.txt.nxs  Cu-HHTP_0001.txt  Cu-HHTP_0003.txt  Cu-HHTP_0004.txt  Cu-HTTP.nxs  README.md  eln_data.yaml
examples/scienta/ibw/: Cu-HHTP.ibw.nxs  Cu-HHTP_0001Cu-HHTP__001.ibw  Cu-HHTP_0002Cu-HHTP__002.ibw  Cu-HHTP_0003Cu-HHTP__003.ibw  Cu-HHTP_0004Cu-HHTP__004.ibw  Cu-HHTP_0005Cu-HHTP__005.ibw  eln_data_scienta_ibw.yaml
examples/scienta/txt/: Cu-HHTP.txt.nxs  Cu-HHTP_0002.txt  Cu-HHTP_0005.txt  eln_data_scienta_txt.yaml
examples/sle/: README.md  eln_data_sle.yaml
examples/specs/: README.md
examples/specs/sle/: Au_25_mbar_O2_no_align.nxs  README.md  eln_data_sle.yaml  params.yaml
examples/specs/xml/: In-situ_PBTTT.nxs  In-situ_PBTTT_XPS_SPECS.xml  README.md  eln_data.yaml  eln_data_xml.yaml
examples/specs/xy/: MgFe2O4.nxs  MgFe2O4.xy  MgFe2O4_with_transmission_function.xy  README.md  eln_data.yaml  eln_data_xy.yaml
examples/vms/: README.md  config_vms_cs.json  config_vms_transformations.json  eln_data_vms.yaml  eln_data_vms_txt_export.yaml  irregular.vms  irregular.vms.nxs  regular.vms.nxs  regular_transformations.vms.nxs  vms-cs.nxs  vms_txt_export.nxs  vms_txt_export.txt
examples/vms/coordinate_system/: README.md  config_vms_transformations_fixed.json  vms-cs.glb
examples/vms/data_analysis/: FeO_analyzed_results.csv  README.md  eln.yaml  vms_data_analysis.nxs
examples/vms/txt_export/: README.md  eln_data_vms_txt_export.yaml  vms_txt_export.nxs
examples/xml/: README.md
explanation/: appdefs.html  contextualization.html  coordinate_system.html  data_processing.html  implementation.html  motivation.html  nomad_integration.html  parser_architecture.html  versioning.html
how-tos/: build_a_parser.html  build_a_reader.html
pynxtools_xps/: file_parser.py  reader.py  reader_utils.py  value_mappers.py
pynxtools_xps/config/: config_phi.json  config_scienta.json  config_scienta_txt.json  config_sle_specs.json  config_specs_sle.json  config_specs_xml.json  config_specs_xy.json  config_txt_vamas_export.json  config_vms.json  config_xml_specs.json  template.json
pynxtools_xps/metadata_specs/: csv_specs.py  slh_specs.py
pynxtools_xps/phi/: phi_data_model.py  spe_pro_phi.py
pynxtools_xps/scienta/: scienta_data_model.py  scienta_igor.py  scienta_mappings.py  scienta_reader.py  scienta_txt.py  scienta_txt_data_model.py  txt_scienta.py
pynxtools_xps/sle/: sle_specs.py
pynxtools_xps/specs/sle/: sle_specs.py
pynxtools_xps/specs/xml/: xml_specs.py
pynxtools_xps/specs/xy/: xy_specs.py
pynxtools_xps/txt/: txt_scienta.py  txt_specs.py  txt_vamas_export.py
pynxtools_xps/vms/: casa_data_model.py  txt_vamas_export.py  vamas.py  vamas_data_model.py
pynxtools_xps/xml/: xml_specs.py
pynxtools_xps/xy/: xy_specs.py
reference/: kratos.html  phi.html  scienta.html  specs.html  vms.html
scripts/: generate_custom_dict.sh  generate_examples.sh  generate_ref_comments_jsons.py  generate_reference_files.sh  regenerate_examples.sh  regenerate_examples_undocumented.sh  regenerate_ref_comments_jsons.sh  regenerate_ref_log_files.sh  regenerate_ref_nxs_files.sh
search/: search_index.json
src/pynxtools_xps/: __init__.py  _utils.py  file_parser.py  logging.py  mapping.py  mkdocs.py  numerics.py  reader.py  reader_utils.py  value_mappers.py
src/pynxtools_xps/config/: config_phi.json  config_scienta.json  config_scienta_hdf5.json  config_specs_sle.json  config_specs_xml.json  config_specs_xy.json  config_txt_vamas_export.json  config_vms.json  template.json
src/pynxtools_xps/kratos/: kratos_data_model.py  metadata_kratos.py
src/pynxtools_xps/models/: __init__.py  backgrounds.py  lineshapes.py
src/pynxtools_xps/nomad/: entrypoints.py
src/pynxtools_xps/parsers/: __init__.py  base.py  versioning.py
src/pynxtools_xps/phi/: phi_data_model.py  spe_pro_phi.py
src/pynxtools_xps/scienta/: scienta_data_model.py  (+2 more)
tests/: test_helpers.py  test_metadata_contexts.py  test_nomad_example.py  test_nomad_examples.py  test_parser.py  test_reader.py  test_versioning.py  test_vms_comment_handler.py  xps.small_test.nxs
tests/data/: regenerate_ref_nxs_files.sh  xps.small_test.nxs
tests/nomad/: test_nomad_example_uploads.py
tutorial/: contributing.html  installation.html  nexusio.html  nomad.html  nomad_usage.html  standalone.html
(+124 files in other folders)
